[package]
name = "winhdrtest"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
egui = "0.33"
raw-window-handle = "0.6"
glam = "0.30"
anyhow = "1.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_Threading",
    "Win32_Security",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
